// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseAlert renders the component 1`] = `
<body>
  <div>
    <div
      class="css-o7gs71"
    >
      Info
    </div>
  </div>
</body>
`;

exports[`BaseAlert renders the component as error 1`] = `
<body>
  <div>
    <div
      class="css-1ozbvuf"
    >
      Error
    </div>
    ,
  </div>
</body>
`;

exports[`BaseAlert renders the component as success 1`] = `
<body>
  <div>
    <div
      class="css-xglbxr"
    >
      Success
    </div>
    ,
  </div>
</body>
`;

exports[`BaseAlert renders the component as warning 1`] = `
<body>
  <div>
    <div
      class="css-129cgic"
    >
      Warning
    </div>
    ,
  </div>
</body>
`;
